--- a/team15_cycle2/UserSettings/Search.settings
+++ b/team15_cycle2/UserSettings/Search.settings
@@ -10,6 +10,12 @@ scopes = {
 	"last_search.DD5CDD96" = "ref:Assets/Scripts/Player/UI/Hotbar.cs"
 	"OpenInspectorPreview.DD5CDD96" = "0"
 	"currentGroup.DD5CDD96" = "scene"
+	"last_search.CE949528" = "Terrain tool"
+	"OpenInspectorPreview.CE949528" = "0"
+	"currentGroup.CE949528" = "all"
+	"last_search.DE949528" = "Terrain tool"
+	"OpenInspectorPreview.DE949528" = "0"
+	"currentGroup.DE949528" = "menu"
 }
 providers = {
 	adb = {
